<resources>
    <string name="google_map_api_key">AIzaSyDQQVaPUFFHgzAc0rXD4FDXsR8CfbmKzdE</string>
    <string name="notification_channel_name">Firebase Event Notification</string>
    <string name="notification_channel_id">3131830000</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">PoGO Radar</string>
    <string name="action_settings">Einstellungen</string>
    <string name="default_app_title">PoGO Radar</string>
    <string name="spinner_title_sign_up">Account wird angelegt…</string>
    <string name="spinner_title_sign_in">Anmeldung…</string>
    <string name="spinner_title_email_verification">E-Mail Bestätigungsanfrage wird gesendet…</string>
    <string name="spinner_title_loading_map_data">Kartenelemente werden aktualisiert…</string>
    <string name="spinner_title_loading_data">Durchsuche hohes Gras in der Umgebung…</string>
    <string name="nav_header_account_state">Account Status: </string>
    <string name="nav_menu_item_map">Karte</string>
    <string name="authentication_app_title">Account</string>
    <string name="authentication_user_state">Account: %s</string>
    <string name="authentication_user_name">Benutzer: %s</string>
    <string name="authentication_user_email">E-Mail: %s</string>
    <string name="authentication_state_signed_in">Eingeloggt</string>
    <string name="authentication_state_signed_in_but_missing_verification">Ausstehende E-Mail Bestätigung…</string>
    <string name="authentication_state_signed_out">Ausgeloggt</string>
    <string name="authentication_state_successful_signup">Erfolgreich angemeldet!</string>
    <string name="authentication_state_successful_signup_subtext">E-Mail Bestätigung wurde versendet…</string>
    <string name="authentication_state_successful_signin">Erfolgreich angemeldet!</string>
    <string name="authentication_state_successful_reset_password">Passwort zurückgesetzt!</string>
    <string name="authentication_state_successful_reset_password_subtext">Bitte schaue in deine E-Mails.</string>
    <string name="authentication_state_synchronization_failed">Synchronisation fehlgeschlagen!</string>
    <string name="authentication_state_authentication_failed">Anmeldung fehlgeschlagen!</string>
    <string name="authentication_state_password_reset_failed">Passwort zurücksetzen fehlgeschlagen!</string>
    <string name="authentication_state_verification_failed">E-Mail Verifikation fehlgeschlagen!</string>
    <string name="authentication_button_sign_in">Anmelden</string>
    <string name="authentication_button_sign_up">Registrieren</string>
    <string name="authentication_button_sign_out">Abmelden</string>
    <string name="authentication_button_verify_email">E-Mail verifizieren</string>
    <string name="authentication_button_open_user_name">Benutzername ändern</string>
    <string name="authentication_button_send_user_name">Neuen Benutzernamen senden</string>
    <string name="authentication_button_edit_infos">Account Daten bearbeiten</string>
    <string name="authentication_button_enable_push_notifications">Push Nachrichten: </string>
    <string name="authentication_button_enable_push_notifications_for_quests">Feldforschungen: </string>
    <string name="authentication_button_enable_push_notifications_for_raids">Raids: </string>
    <string name="authentication_button_medal">Medaillien: </string>
    <string name="authentication_medal_text_pokestops">Eingereichte Pok&#233;stops</string>
    <string name="authentication_medal_text_arenas">Eingereichte Arenen</string>
    <string name="authentication_medal_text_raids">Eingereichte Raids</string>
    <string name="authentication_medal_text_quests">Eingereichte Quests</string>
    <string name="authentication_login_description">Erstelle einen neuen Account oder melde dich mit einem bestehenden Account an, um den vollen Umfang der
        App nutzen zu können.
    </string>
    <string name="authentication_login_button_signin">Anmelden</string>
    <string name="authentication_login_button_signup">Account anlegen</string>
    <string name="authentication_login_button_signout">Abmelden</string>
    <string name="authentication_login_button_reset_password">Passwort vergessen?\n(zurücksetzen)</string>
    <string name="authentication_login_button_verification">Sende Verifikations-E-Mail\n(User wird ausgeloggt)</string>
    <string name="authentication_login_email_description_signup">Um einen Account zu erstellen benötigen wir eine gültige
        E-Mail Adresse von dir. Bitte achte darauf, dass die E-Mail Adresse korrekt ist, da du von uns eine
        Bestätigungs-E-Mail bekommst.
    </string>
    <string name="authentication_login_email_description_signin">Bitte gebe deine Account E-Mail Adresse ein, mit der du dich registriert hast.
    </string>
    <string name="authentication_login_email_description_password_reset">Bitte gebe deine Account E-Mail Adresse ein, für die du dein Passwort zurücksetzen möchtest.
    </string>
    <string name="authentication_login_email_edit_hint_text">Trage hier deine E-Mail Adresse ein</string>
    <string name="authentication_login_password_description_signup">Bitte wähle ein Passwort aus. Dieses muss mindestens 6
        Zeichen lang sein und muss aus Buchstaben und Zahlen bestehen.
    </string>
    <string name="authentication_login_password_description_signin">Bitte gebe dein Passwort ein. Dieses muss mindestens 6
        Zeichen lang sein und muss aus Buchstaben und Zahlen bestehen.
    </string>
    <string name="authentication_login_password_edit_hint_text">Trage hier dein Passwort ein</string>
    <string name="authentication_login_name_description">Bitte gebe deinen Trainer Namen ein, den du auch im Spiel
        verwendest.
    </string>
    <string name="authentication_login_name_edit_hint_text">Trage hier deinen Trainer Namen ein</string>
    <string name="authentication_login_screen_title_1">E-Mail</string>
    <string name="authentication_login_screen_title_2">Password</string>
    <string name="authentication_login_screen_title_3">Trainer Name</string>
    <string name="authentication_login_screen_title_4">Account Details</string>
    <string name="authentication_login_screen_title_5">Prüfen</string>
    <string name="authentication_login_details_email">E-Mail: </string>
    <string name="authentication_login_details_password">Password: </string>
    <string name="authentication_login_details_name">Trainer Name: </string>
    <string name="authentication_login_details_team">Team: </string>
    <string name="authentication_login_details_level">Level: </string>
    <string name="authentication_login_details_code">Trainer Code: </string>
    <string name="authentication_hint_email">Gebe deine E-Mailadresse hier ein.</string>
    <string name="authentication_hint_password">Gebe dein Passwort hier ein.</string>
    <string name="authentication_edittext_email_error">Benötigt!</string>
    <string name="authentication_edittext_password_error">Benötigt!</string>
    <string name="map_title_arena">Neue Arena</string>
    <string name="map_title_pokestop">Neuer Pok&#233;stop</string>
    <string name="map_max_zooming_level">Max Zoom Stufe erreicht. Bitte zoome näher heran.</string>
    <string name="map_max_subscriptions">Max Anzahl an Gebieten erreicht. Bitte lösche erst ein Gebiet bevor du wieder
        ein neues hinzufügen kannst.
    </string>
    <string name="map_map_item_edittext">Bitte füge hier den Name der/des %s aus dem Spiel ein.</string>
    <string name="map_map_item_which_item_to_add">Was möchtest du einrichten?</string>
    <string name="map_map_item_position_correct">Stimmt die Position?</string>
    <string name="map_map_item_position_correct_subtext">Du kannst die Position hier verschieben. Halte das Symbol fest
        und schiebe es bis die Position passt.
    </string>
    <string name="map_map_item_name_of_pokestop">Wie heißt der Pok&#233;stop?</string>
    <string name="map_map_item_name_of_arena">Wie heißt die Arena?</string>
    <string name="map_map_item_name_of_item_subtext">Bitte gebe genau den Namen ein, den du auch im Spiel findest.
    </string>
    <string name="map_map_item_isex_arena">EX-Arena?</string>
    <string name="map_map_item_check_data">Sind deine Eingaben korrekt?</string>
    <string name="map_map_item_check_data_subtext">Bitte beachte, dass es sich hier um nutzergenerierte Daten handelt.
        Stelle sicher, dass alles korrekt ist, damit andere Spieler den Pokestop/ die Arena auch finden können.
    </string>
    <string name="map_map_item_button_further">Weiter</string>
    <string name="map_map_item_button_send">Absenden</string>
    <string name="map_map_item_creation_page_title_1">Position</string>
    <string name="map_map_item_creation_page_title_2">Name</string>
    <string name="map_map_item_creation_page_title_3">Prüfen &amp; Senden</string>
    <string name="map_info_window_arena_subheader_default">Arena</string>
    <string name="map_info_window_arena_subheader_ex">EX-Arena</string>
    <string name="map_info_window_arena_button_info">Details / Neuer Raid</string>
    <string name="map_info_window_pokestop_subheader">Pok&#233;stop</string>
    <string name="map_info_window_pokestop_button_info">Details &amp; Quest</string>
    <string name="map_settings_title">Karten Filter</string>
    <string name="map_setting_arena">Arenen anzeigen</string>
    <string name="map_setting_arena_raid">nur mit Raid</string>
    <string name="map_setting_arena_ex">nur EX</string>
    <string name="map_setting_pokestop">Pok&#233;stops anzeigen</string>
    <string name="map_setting_pokestop_quest">nur mit Quest</string>
    <string name="raid_app_title">Neuer Level %d Raid</string>
    <string name="raid_eggs_title">Raid Level: </string>
    <string name="raid_check_egg">Raid läuft bereits?</string>
    <string name="raid_raidboss_selection">Wähle einen Raidboss aus: </string>
    <string name="raid_raidboss_overview">Mögliche Raidbosse: </string>
    <string name="raid_text_time_egg">Zeit bis Ei schlüpft: </string>
    <string name="raid_text_time_raid">Zeit bis Raid endet: </string>
    <string name="raid_check_participation">Teilnehmen: </string>
    <string name="raid_text_time_meetup">Treffzeitpunkt: </string>
    <string name="raid_button_time_hour">Uhrzeit</string>
    <string name="raid_button_time_minutes">Minuten</string>
    <string name="raid_button_send">Raid melden</string>
	<string name="raid_button_send_raidboss">Raidboss melden</string>
    <string name="arena_gold_arena">Gold Arena: </string>
    <string name="arena_raid_button_new_raid">Neuen Raid melden</string>
    <string name="arena_raid_meetup_time">Treffzeitpunkt: </string>
    <string name="arena_raid_time_until_egg_hatches">Ei schlüpft um: </string>
    <string name="arena_raid_time_until_raid_ends">Raid endet um: </string>
    <string name="arena_raid_participants">Anzahl der Teilnehmer: </string>
    <string name="arena_raid_participants_list">Teilnehmerliste</string>
    <string name="arena_raid_chat">Chat</string>
    <string name="arena_raid_button_send_meetup_time">Bestätigen</string>
    <string name="arena_raid_button_change_meetup_time">Treffzeitpunkt ändern</string>
    <string name="arena_raid_share_raid_header">Teile den Raid mit deinen Freunden</string>
    <string name="pokestop_active_quest">Aktive Quest: </string>
    <string name="pokestop_quest_reward">Belohnung: </string>
    <string name="pokestop_quest_none">Kein Quest gemeldet</string>
    <string name="pokestop_quest_button_new_quest">Neue Quest melden</string>
    <string name="pokestop_quest_title_new_quest">Neue Quest: </string>
    <string name="pokestop_quest_search_field_hint">Quests durchsuchen</string>
    <string name="pokestop_quest_popup_title">Quest wirklich melden?</string>
    <string name="policy_app_title">Terms &amp; Conditions</string>
</resources>