<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/icon_account_30dp"
            android:title="@string/authentication_app_title"/>
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/icon_map_30dp"
            android:title="@string/nav_menu_item_map"/>
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/icon_imprint_30dp"
            android:title="@string/policy_app_title"/>
    </group>


    <!-- TODO: for later -->
    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/icon_menu_share"-->
                <!--android:title="Share"/>-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/icon_menu_send"-->
                <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
