<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:id="@+id/authentication_layout"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:layout_gravity="top"
                                             android:layout_marginTop="@dimen/layout_margin_top"
                                             android:layout_marginBottom="@dimen/layout_margin_bottom"
                                             android:layout_marginStart="@dimen/layout_margin_start"
                                             android:layout_marginEnd="@dimen/layout_margin_end"
                                             android:background="@color/colorWhiteBlue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/authentication_layout_edit_texfield">

        <TextView
            android:id="@+id/authentication_textview_status"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/item_padding_default"
            android:gravity="center_vertical"
            android:layout_gravity="start"
            tools:text="auth status"/>

        <Button
            android:id="@+id/authentication_button_user_name"
            style="@style/AppButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/authentication_button_open_user_name"/>

        <EditText
            android:id="@+id/authentication_edittext_user_name"
            style="@style/AppButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="2"
            android:visibility="gone"/>

        <Button
            android:id="@+id/authentication_button_sign_in"
            style="@style/AppButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/authentication_button_sign_in"/>

        <Button
            android:id="@+id/authentication_button_sign_up"
            style="@style/AppButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/authentication_button_sign_up"/>

        <Button
            android:id="@+id/authentication_button_verify_email"
            style="@style/AppButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/authentication_button_verify_email"/>

        <Button
            android:id="@+id/authentication_button_sign_out"
            style="@style/AppButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/authentication_button_sign_out"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/authentication_layout_edit_texfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/authentication_edittext_email"
            style="@style/AppButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authentication_hint_email"
            android:inputType="textEmailAddress|textMultiLine"
            android:maxLines="2"/>

        <EditText
            android:id="@+id/authentication_edittext_password"
            style="@style/AppButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authentication_hint_password"
            android:inputType="textPassword"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/authentication_imageButton_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/item_padding_default"
        android:src="@drawable/ic_close"
        android:background="@color/colorTransparent"
        tools:ignore="ContentDescription"/>

</android.support.constraint.ConstraintLayout>