<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:padding="@dimen/layout_padding_screen">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_size_big">

            <ImageView
                android:id="@+id/account_imageView_0"
                android:layout_width="@dimen/image_size_medium"
                android:layout_height="@dimen/image_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/icon_instinct_512dp"/>

            <ImageView
                android:id="@+id/account_imageView_1"
                android:layout_width="@dimen/image_size_medium"
                android:layout_height="@dimen/image_size_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/icon_valor_512dp"/>

            <ImageView
                android:id="@+id/account_imageView_2"
                android:layout_width="@dimen/image_size_medium"
                android:layout_height="@dimen/image_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/mystic"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/TextStyle_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_large"
            android:layout_marginBottom="@dimen/layout_margin_default"
            android:text="@string/authentication_login_description"/>

        <include layout="@layout/layout_divider"/>

        <Button
            android:id="@+id/account_button_signin"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_default"
            android:text="@string/authentication_login_button_signin"/>

        <Button
            android:id="@+id/account_button_signup"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_default"
            android:text="@string/authentication_login_button_signup"/>

        <Button
            android:id="@+id/account_button_verification"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_default"
            android:text="@string/authentication_login_button_verification"/>

        <Button
            android:id="@+id/account_button_signout"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_default"
            android:text="@string/authentication_login_button_signout"/>

    </LinearLayout>

</ScrollView>