<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:id="@+id/layout_authentication"
                                             android:padding="@dimen/layout_padding_screen"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/white">

    <ImageView
        android:id="@+id/authentication_imageview_user"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".3"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/icon_id_card"/>

    <LinearLayout
        android:id="@+id/authentication_layout_user"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".7"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/authentication_imageview_user"
        android:layout_marginStart="@dimen/layout_margin_default"
        android:orientation="vertical">

        <TextView
            android:id="@+id/authentication_layout_user_status"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center_vertical"
            android:layout_gravity="start"
            tools:text="auth status"/>

        <TextView
            android:id="@+id/authentication_layout_user_name"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center_vertical"
            android:layout_gravity="start"
            tools:text="user name"/>

        <TextView
            android:id="@+id/authentication_layout_user_email"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center_vertical"
            android:layout_gravity="start"
            tools:text="user email"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/authentication_button_user_name"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/authentication_button_open_user_name"/>

        <EditText
            android:id="@+id/authentication_edittext_user_name"
            style="@style/TextStyle_edittext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="2"
            android:visibility="gone"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/authentication_button_sign_in"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/authentication_button_sign_in"/>

        <Button
            android:id="@+id/authentication_button_sign_up"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/authentication_button_sign_up"/>

        <Button
            android:id="@+id/authentication_button_verify_email"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/authentication_button_verify_email"/>

        <Button
            android:id="@+id/authentication_button_sign_out"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/authentication_button_sign_out"/>

        <EditText
            android:id="@+id/authentication_edittext_email"
            style="@style/TextStyle_edittext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/authentication_hint_email"
            android:inputType="textEmailAddress|textMultiLine"
            android:maxLines="2"/>

        <EditText
            android:id="@+id/authentication_edittext_password"
            style="@style/TextStyle_edittext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/authentication_hint_password"
            android:inputType="textPassword"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>