<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="io.stanc.pogoradar.viewmodel.LoginViewModel" />
        <variable
            name="settings"
            type="io.stanc.pogoradar.AppSettings"/>
        <import type="android.view.View"/>
        <import type="io.stanc.pogoradar.firebase.node.Team"/>
        <import type="io.stanc.pogoradar.utils.SegmentedControlView.Selection"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingStart="@dimen/layout_padding_screen"
        android:paddingEnd="@dimen/layout_padding_screen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authentication_login_details_name"/>

            <EditText
                style="@style/TextStyle_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:layout_marginTop="@dimen/layout_margin_small"
                android:text="@={viewModel.name}"/>

            <TextView
                style="@style/TextStyle_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authentication_login_details_code"
                android:layout_marginTop="@dimen/layout_margin_default"/>

            <EditText
                style="@style/TextStyle_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:layout_marginTop="@dimen/layout_margin_small"
                android:text="@={viewModel.code}"/>

            <TextView
                style="@style/TextStyle_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authentication_login_details_team"
                android:layout_marginTop="@dimen/layout_margin_default"/>

            <io.stanc.pogoradar.utils.SegmentedControlView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:textLeft="@{viewModel.teamOrder[0].name}"
                app:textMiddle="@{viewModel.teamOrder[1].name}"
                app:textRight="@{viewModel.teamOrder[2].name}"
                app:startSelection="@{viewModel.team.name}"
                app:selectionColor="@{viewModel.teamColor}"
                app:onSelectionChangeListener="@{viewModel.onSelectedStateDidChange}"
                android:layout_marginTop="@dimen/layout_margin_small"/>

            <TextView
                style="@style/TextStyle_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authentication_login_details_level"
                android:layout_marginTop="@dimen/layout_margin_default"/>

            <NumberPicker
                android:id="@+id/account_info_edit_numberpicker_level"
                android:layout_height="@dimen/raid_picker_height"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_small"
                android:layout_gravity="center"/>

            <include layout="@layout/layout_divider"/>

            <Button
                android:id="@+id/account_info_edit_button"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map_map_item_button_send"/>

        </LinearLayout>

    </ScrollView>

</layout>