<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>
		<variable
			name="raidViewModel"
			type="io.stanc.pogoradar.viewmodel.arena.RaidViewModel"/>
	</data>

	<androidx.cardview.widget.CardView style="@style/CardViewLayout">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:padding="@dimen/layout_margin_small">

			<TextView
				style="@style/TextStyle_bold"
				android:id="@+id/cardview_arena_participations_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				android:text="@string/arena_raid_participants"/>

			<TextView
				style="@style/TextStyle_bold"
				android:id="@+id/cardview_arena_participations_num"
				android:textSize="@dimen/font_size_30"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@id/cardview_arena_participations_text"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_margin="@dimen/layout_margin_medium"
				android:text="@{raidViewModel.numParticipants}"
				tools:text="1000"/>

			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline_vertical_center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.5"/>

			<Button
				android:id="@+id/arena_raid_button_participants_list"
				style="@style/ButtonStyle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@id/cardview_arena_participations_num"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="@id/guideline_vertical_center"
				android:layout_marginTop="@dimen/layout_margin_medium"
				android:layout_marginEnd="@dimen/layout_margin_small"
				android:text="@string/arena_raid_participants_list"/>

			<Button
				android:id="@+id/arena_raid_button_chat"
				style="@style/ButtonStyle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@id/cardview_arena_participations_num"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="@id/guideline_vertical_center"
				android:layout_marginTop="@dimen/layout_margin_medium"
				android:layout_marginStart="@dimen/layout_margin_small"
				android:text="@string/arena_raid_chat"/>

		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.cardview.widget.CardView>

</layout>